css fixes, hacky attempt to sort list to avoid jumpyness

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -7,14 +7,18 @@ body {
 	padding: 0;
 }
 
+#whoslooking-onlookers-list li {
+	margin-top: 5px
+}
+
 .whoslooking-fullname {
 	line-height: 24px;
 	padding: 2px 30px 2px 5px;
 	position: relative;
-	vertical-align: top;	
+	vertical-align: middle;	
 }
 
 .whoslooking-avatar {
 	border-radius: 3px;
-	
+	vertical-align: middle;
 }
